# rowdy

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  install.sh
.github/workflows/: ci.yml  release.yml
examples/: probe_sqlite.rs  seed_sqlite.rs
src/: action.rs  app.rs  chat_session.rs  cli.rs  clipboard.rs  command.rs  config.rs  connections.rs  crypto.rs  event.rs  export.rs  log.rs  main.rs  session.rs  sql_infer.rs  sql_quote.rs  subcommands.rs  terminal.rs  update.rs  user_config.rs
src/action/: auth.rs  chat.rs  completion.rs  conn_form.rs  conn_list.rs  llm_settings.rs  mod.rs
src/autocomplete/: cache.rs  context.rs  ddl.rs  engine.rs  functions.rs  insert.rs  keywords.rs  mod.rs
src/datasource/: cell.rs  error.rs  mod.rs  schema.rs
src/datasource/sql/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/keybindings/: actions.rs  chord.rs  keymap.rs  mod.rs
src/llm/: agents_md.rs  fs_root.rs  keystore.rs  mod.rs  prompt.rs  provider.rs  tools.rs  worker.rs
src/state/: auth.rs  chat.rs  command.rs  completion.rs  conn_form.rs  conn_list.rs  editor.rs  focus.rs  layout.rs  llm_settings.rs  mod.rs  overlay.rs  results.rs  right_panel.rs  schema.rs  screen.rs  status.rs  theme_picker.rs
src/ui/: auth_view.rs  autocomplete_popover.rs  bottom_bar.rs  chat_view.rs  command_completion_popover.rs  conn_form_view.rs  conn_list_view.rs  editor_view.rs  help_view.rs  llm_settings_view.rs  mod.rs  results_view.rs  schema_view.rs  theme.rs  theme_picker_view.rs
src/worker/: mod.rs  request.rs
themes/: base16-dark.toml  base16-light.toml  dark.toml  dracula.toml  github-light.toml  gruber-darker.toml  gruvbox.toml  light.toml  monokai.toml  neon.toml  nord.toml  rose-pine.toml  solarized-dark.toml  solarized-light.toml
