[package]
name = "rowdy"
version = "0.5.3"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
argon2 = "0.5.3"
async-trait = "0.1.83"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
edtui = "0.11.2"
futures = "0.3.31"
llm = { version = "1.3.8", default-features = false, features = ["default-tls", "openai", "anthropic", "ollama", "google", "deepseek", "openrouter"] }
nucleo-matcher = "0.3.1"
rand = "0.10.1"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlformat = "0.5.0"
sqlparser = "0.61.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono", "uuid", "json", "bigdecimal"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }
zeroize = "1.8.2"
