[package]
name = "rowdy"
version = "0.12.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
argon2 = "0.5.3"
async-trait = "0.1.83"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
edtui = "0.11.2"
futures = "0.3.31"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
include_dir = "0.7"
llm = { version = "1.3.8", default-features = false, features = ["rustls-tls", "openai", "anthropic", "ollama", "google", "deepseek", "openrouter"] }
nucleo-matcher = "0.3.1"
rand = "0.10.1"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
rpassword = "7.4.0"
semver = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlformat = "0.5.0"
sqlparser = "0.61.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "sqlite", "postgres", "mysql", "chrono", "uuid", "json", "bigdecimal"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }
zeroize = "1.8.2"
